fixed vignette, bleeding blur issue

--- a/app/themes/so-il/src/sass/base.scss
+++ b/app/themes/so-il/src/sass/base.scss
@@ -189,6 +189,8 @@ nav {
   margin: 0 auto;
   width: $five-columns;
   line-height: _(21px);
+  position:relative;
+  z-index:99999;
   
   a:hover {
     @include dont-blur;
